- Completed work on the RecentOrder sync. * Able to fetch remote data * Able to use db * Able to view list - Not finished though

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,8 +22,8 @@
             </intent-filter>
         </activity>
         
-        <service android:name=".service.SyncService" />
-        <provider android:name=".provider.TrackingProvider"
+        <service android:name=".model.service.SyncService" />
+        <provider android:name=".model.provider.TrackingProvider"
             android:authorities="com.essers.tracking.provider"
             />
         
