--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,15 +5,16 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="11"
         android:targetSdkVersion="14" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity
-            android:name=".HomeActivity"
+            android:name=".ui.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +23,25 @@
             </intent-filter>
         </activity>
         
+        <!-- Phone only activities -->
+        <activity
+            android:name=".ui.phone.RecentOrdersActivity"
+            android:label="@string/title_recent_orders">
+        </activity>
+
+        <!-- Tablet only activities -->
+        <activity
+            android:name=".ui.tablet.RecentOrdersMultiPaneActivity"
+            android:label="@string/title_recent_orders" >
+        </activity>
+
+        <!-- Service to sync the ContentProvider -->
         <service android:name=".model.service.SyncService" />
-        <provider android:name=".model.provider.TrackingProvider"
-            android:authorities="com.essers.tracking.provider"
-            />
+
+        <!-- ContentProvider wich holds all data -->
+        <provider
+            android:name=".model.provider.TrackingProvider"
+            android:authorities="com.essers.tracking.provider" />
         
     </application>
 
