--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,9 +12,11 @@
 
     <application
         android:icon="@drawable/ic_launcher"
+        android:theme="@android:style/Theme.Holo.Light"
         android:label="@string/app_name" android:debuggable="true">
+        
         <activity
-            android:name=".ui.HomeActivity"
+            android:name=".depricated.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,17 +25,7 @@
             </intent-filter>
         </activity>
         
-        <!-- Phone only activities -->
-        <activity
-            android:name=".ui.phone.RecentOrdersActivity"
-            android:label="@string/title_recent_orders">
-        </activity>
-
-        <!-- Tablet only activities -->
-        <activity
-            android:name=".ui.tablet.RecentOrdersMultiPaneActivity"
-            android:label="@string/title_recent_orders" >
-        </activity>
+       
 
         <!-- Service to sync the ContentProvider -->
         <service android:name=".model.service.SyncService" />
