--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/jackson-core-asl-1.8.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Android support library"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Signpost"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
