--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,21 +11,27 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
-        android:theme="@android:style/Theme.Holo.Light"
-        android:label="@string/app_name" android:debuggable="true">
-        
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Essers" >
         <activity
             android:name=".ui.RecentOrdersActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ui.OrderDetailActivity"
+            android:label="@string/title_order_detail" >
+        </activity>
+        <activity android:name=".ui.HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-       
+        <activity android:name=".ui.LoginActivity" >
+        </activity>
 
         <!-- Service to sync the ContentProvider -->
         <service android:name=".model.service.SyncService" />
@@ -34,7 +40,6 @@
         <provider
             android:name=".model.provider.TrackingProvider"
             android:authorities="com.essers.tracking.provider" />
-        
     </application>
 
 </manifest>
