--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/jackson-core-asl-1.8.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Android support library"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Signpost"/>
+	<classpathentry kind="lib" path="libs/CWAC-AdapterWrapper.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
