- Added search by order_id - Changed orderlist headers - Changed rest calls

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,10 @@
             android:name=".ui.OrderDetailActivity"
             android:label="@string/title_order_detail" >
         </activity>
-        <activity android:name=".ui.HomeActivity" >
+        <activity android:name=".ui.SearchActivity" >
+            
+        </activity>
+        <activity android:name=".ui.SearchResultActivity" >
             
         </activity>
         <activity android:name=".ui.LoginActivity" >
