--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,20 +5,26 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="13"
-        android:targetSdkVersion="14" />
+        android:minSdkVersion="4"
+        android:targetSdkVersion="11" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:debuggable="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Essers" >
+        
+         <uses-library android:name="com.google.android.maps" />
+         
         <activity
             android:name=".ui.RecentOrdersActivity"
             android:label="@string/title_recent_orders" />
         
+        <activity 
+            android:name=".ui.MyMapActivity"
+            android:label="@string/menu_detail_map"/>
         <activity
             android:name=".ui.OrderDetailActivity"
             android:label="@string/title_order_detail" />
